<resources>
    <string name="app_name">HairHood</string>

    <!-- MENU OPTIONS -->
    <string name="favorites">favoritos</string>
    <string name="places">sitios</string>
    <string name="profile">perfil</string>
    <string name="chat">chat</string>

    <!-- LOGIN ACTIVITY -->
    <string name="log_in">Iniciar sesión</string>
    <string name="closeFrm">Cerrar formulario</string>
    <string name="userName">Usuario</string>
    <string name="userPassword">Contraseña</string>
    <string name="noLoginAcc">¿No tienes una cuenta todavía?</string>
    <string name="forgetPass">¿Has olvidado la contraseña?</string>

    <!-- REGISTER ACTIVITY -->
    <string name="register">Registrarse</string>
    <string name="dniError">Agrega un DNI correcto</string>

    <!-- ADMIN ACTIVITY -->
    <string name="adminConfig">Configuración del administrador</string>
    <string name="type">Tipo</string>
    <string name="remove">Eliminar usuario</string>

    <!-- PROFILE ACTIVITY -->
    <string name="moreInformation">Más información</string>
    <string name="logOut">Cerrar sesión</string>
    <string name="changePassword">Cambiar contraseña</string>
    <string name="saveAndBack">Guardar y volver</string>
    <string name="back">Volver</string>
    <string name="nameSurname">Nombre</string>
    <string name="email">Correo electrónico</string>
    <string name="phoneNumber">Número de teléfono</string>
    <string name="address">Dirección</string>
    <string name="oldPassword">Contraseña actual</string>
    <string name="newPassword">Nueva contraseña</string>
    <string name="newPasswordRepeat">Repite la nueva contraseña</string>
    <string name="titulation">Titulación</string>
    <string name="specialty">Especialidades</string>
    <string name="emailError">Agrega un correo electrónico correcto</string>
    <string name="tfnoError">El teléfono debe tener 9 números</string>
    <string name="fields">Rellena los campos correctamente</string>
    <string name="passwordsMustCoincide">Las contraseñas deben coincidir</string>
    <string name="wrongPassword">Contraseña incorrecta</string>

    <!-- PAY ACTIVITY -->
    <string name="titulo">METODO DE PAGO</string>
    <string name="numero">Nº Tarjeta</string>
    <string name="caducidad">Caducidad</string>
    <string name="mes">mm</string>
    <string name="ano">aa</string>
    <string name="pagar">PAGAR</string>



    <!-- PAY ACTIVITY -->
    <string name="vacio">Por favor rellene todos los campos</string>
    <string name="txartelaError">La tarjeta debe tener 16 números</string>
    <string name="mesError">El mes debe tener 2 números</string>
    <string name="anoError">El año debe tener 2 números</string>
    <string name="cvvError">El CVV debe tener 3 números</string>

    <string name="reservar">Reservar</string>
    <string name="elegir">Elige lo que quieras hacerte:</string>
    <string name="hora">Reservar hora:</string>
    <string name="cejas">Hacer las cejas   5€</string>
    <string name="pelo">Cortar el pelo   11€</string>
    <string name="barba">Cortar barba   5€</string>
    <string name="peloBarba">Cortar pelo + barba   14€</string>
    <string name="reservar2">RESERVAR</string>

</resources>

