<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AdminActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold|normal|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adminConfig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:stretchColumns="1,2,3"
        >

        <TableRow>

            <TextView
                android:layout_column="1"
                android:textSize="16dp"
                style="@style/table_row_item"
                android:id="@+id/tv_user_dni"
                android:padding="10dp"
                android:gravity="center"
                android:text="DNI"
                android:textStyle="bold" />
            <TextView
                android:layout_column="1"
                android:gravity="center"
                style="@style/table_row_item"
                android:textSize="16dp"
                android:padding="10dp"
                android:text="@string/userName"
                android:textStyle="bold" />
            <TextView
                android:layout_column="1"
                android:textSize="16dp"
                android:padding="10dp"
                android:gravity="center"
                style="@style/table_row_item"
                android:text="@string/type"
                android:id="@+id/tv_user_surname"
                android:textStyle="bold" />
        </TableRow>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/table_recycler_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>