<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layouMasInfoPelu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MoreInfoPelu">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/nameSurname"
                app:layout_constraintEnd_toEndOf="@+id/editTextNombrePelu2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextNombrePelu2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextNombrePelu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/email"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailPelu"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailPelu"
                app:layout_constraintTop_toBottomOf="@+id/editTextNombrePelu2" />

            <EditText
                android:id="@+id/editTextEmailPelu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editTextNombrePelu2"
                app:layout_constraintStart_toStartOf="@+id/editTextNombrePelu2"
                app:layout_constraintTop_toBottomOf="@+id/textView9"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/phoneNumber"
                app:layout_constraintEnd_toEndOf="@+id/editTextTfnoPelu"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/editTextTfnoPelu"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmailPelu" />

            <EditText
                android:id="@+id/editTextTfnoPelu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/editTextEmailPelu"
                app:layout_constraintStart_toStartOf="@+id/editTextEmailPelu"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCambiarContraPelu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changePassword"
                app:backgroundTint="@color/pinkColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTfnoPelu"
                app:layout_constraintVertical_bias="0.263"
                app:shapeAppearanceOverlay="@style/Button5" />

            <Button
                android:id="@+id/btnVolverPelu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:backgroundTint="@color/pinkColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCambiarContraPelu"
                app:layout_constraintVertical_bias="0.833"
                app:shapeAppearanceOverlay="@style/Button5" />

            <Button
                android:id="@+id/btnGuardarPelu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveAndBack"
                app:backgroundTint="@color/pinkColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCambiarContraPelu"
                app:layout_constraintVertical_bias="0.412"
                app:shapeAppearanceOverlay="@style/Button5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>