<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_login"
    android:layout_gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="25dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:cardCornerRadius="25dp"
            android:padding="32dp"
            tools:context=".activities.Pay">

            <TextView
                android:id="@+id/titulua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/titulo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="32dp"
                android:orientation="horizontal"
                android:layout_marginBottom="48dp">

                <ImageView
                    android:id="@+id/maestroLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/maestro" />

                <ImageView
                    android:id="@+id/americanLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/american" />

                <ImageView
                    android:id="@+id/mastercardLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/mastercard" />

                <ImageView
                    android:id="@+id/visaLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/visa" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgTarjeta"
                    android:layout_width="31dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/tarjeta" />

                <TextView
                    android:id="@+id/zenbakiaTitulua"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:text="@string/numero"
                    android:textSize="18sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextZenbakia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="XXXX XXXX XXXX XXXX"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCalendario"
                    android:layout_width="72dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/calendario" />

                <TextView
                    android:id="@+id/iraungipenTitulua"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:text="@string/caducidad"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextMes"
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/mes"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextAno"
                    android:layout_width="238dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ano"
                    android:inputType="number"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCandado"
                    android:layout_width="72dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/candado" />

                <TextView
                    android:id="@+id/cvvTitulua"
                    android:layout_width="243dp"
                    android:layout_height="wrap_content"
                    android:text="CVV:"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editextZenbakiaCvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="XXX"
                android:inputType="number"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnOrdaindu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/pagar"
                app:backgroundTint="@color/pinkColor"
                app:shapeAppearanceOverlay="@style/Button5" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>